--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -44,7 +44,7 @@
                </button>
                <!-- Logo -->
                <div class="navbar-brand page-scroll">
-                  <a href="#page-top"><img src="img/logo.png"  alt=""></a>
+                  <a href="#page-top"><img src="img/Barrys.svg"  alt=""></a>
                </div>
             </div>
             <!-- /.navbar-header -->
@@ -104,9 +104,9 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Welcome to</span><br>Piece of cake</h1>
+                     <h1><span>Welcome to</sppan><br>Barry’s Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">A HTML Template with the perfect design for your website, It Includes beautiful ilustrations and useful features.</p>
+                        <p class="subtitle"></p>
                         <div class="page-scroll">
                            <!-- Button -->
                            <a class="btn" href="#contact">
@@ -142,16 +142,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>We Love</span><br>Cupcakes</h1>
+                     <h1><span>We Love</span><br>Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">Non metus ali quam eros eget liquam erat volutpat phasellus ac sodales felis lorem ipsuet lorens.</p>
+                        <p class="subtitle"></p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <a class="btn" href="#contact">
+                           <!-- <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a>
+                           </a> -->
                         </div>
                      </div>
                   </div>
@@ -242,205 +242,7 @@
       <!-- /slider -->
 
 	  
-      <!-- Section Services -->
-      <section id="services">
-         <div class="container">
-            <div class="col-lg-12">
-               <!-- Section heading -->
-               <div class="section-heading">
-                  <h2>Our Services</h2>
-                  <div class="hr"></div>
-               </div>
-            </div>
-            <!-- /col-lg-12 -->
-            <div class="row services-row">
-               <div class="col-lg-4 col-md-4 col-md-offset-1">
-                  <img class="img-responsive" src="img/servicesmain.png" alt="">
-               </div>
-               <!-- /col-lg-4-->
-               <div class="col-lg-7 col-md-7">
-                  <h3>You can't buy happiness <br> but you can buy CAKE</h3>
-                  <h4><small>And that's kind of the same thing!</small></h4>
-                  <p>Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc 
-                     vel mauris ultricies, vest ibulum orci eget,Fusce mollis imperdiet interdum donec eget metus auguen unc vel
-                     lorem ispuet Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac sodales Lorem ipsum dolor 
-                     sit amet, consectetur adipisicing elit uasi.   
-                  </p>
-                  <!-- Button -->
-                  <div class="page-scroll">
-                     <a class="btn" href="#contact">
-                        <div class="btn-line"></div>
-                        <div class="btn-line btn-line-shift"></div>
-                        Contact us Today
-                     </a>
-                  </div>
-                  <!-- /page-scroll-->				   
-               </div>
-               <!-- /col-lg-7 -->			   
-            </div>
-            <!-- /row -->
-            <div class="row margin1">
-               <!-- carousel -->
-               <div class="owl-carousel" id="owl-services">
-                  <!-- Box 1 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service1.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Weddings</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-                  <!-- Box 2 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service2.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Corporate Events</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-                  <!-- Box 3 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service3.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Birthdays</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-                  <!-- Box 4 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service4.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Gourmet</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-                  <!-- Box 5 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service5.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Healthy Options</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-                  <!-- Box 6 -->
-                  <div class="col-xs-12">
-                     <div class="box_icon">
-                        <div class="icon">
-                           <!-- image -->
-                           <div class="image"> 
-                              <img class="img-responsive img-circle" src="img/service6.jpg" alt="">
-                           </div>
-                           <div class="info">
-                              <h5>Pastries</h5>
-                              <p>Lorem Ipsuet ipsu Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non.</p>
-                              <!-- Button -->
-                              <div class="page-scroll">
-                                 <a class="btn" href="#contact">
-                                    <div class="btn-line"></div>
-                                    <div class="btn-line btn-line-shift"></div>
-                                    More
-                                 </a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- /box_icon -->
-                  </div>
-                  <!-- /col-xs-12 ends -->
-               </div>
-               <!-- /carousel -->
-            </div>
-            <!-- /row -->
-         </div>
-         <!-- /container-->
-      </section>
-      <!-- /section-->
+
 	  
       <!-- Section About --> 
       <section id="about" class="color-section2">
@@ -452,7 +254,7 @@
             </div>
             <!-- Text -->
             <div class="row">
-               <div class="col-lg-8 col-sm-12">
+               <div class="col-lg-12 col-sm-12">
                   <h3>Baking Delicious cakes since 1990</h3>
                   <p>Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc 
                      vel mauris ultricies, vest ibulum orci eget,Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac
@@ -463,59 +265,7 @@
                   </p>
                </div>
                <!-- /col-lg-8 -->
-               <div class="col-lg-4 col-sm-12">
-                  <!-- Accordion -->
-                  <div class="panel-group" id="accordion">
-                     <!-- Question 1 -->
-                     <div class="panel">
-                        <div class="panel-heading">
-                           <h5 class="panel-title">
-                              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Social Responsability</a>
-                           </h5>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse in">
-                           <div class="panel-body">
-                              <p>
-                                 Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc vel mauris ultricies, vest ibulum orci eget. 
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- Question 2 -->
-                     <div class="panel">
-                        <div class="panel-heading">
-                           <h5 class="panel-title">
-                              <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Mission Statement</a>
-                           </h5>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse">
-                           <div class="panel-body">
-                              <p>
-                                 Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc vel mauris ultricies, vest ibulum orci eget. 
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                     <!-- Question 3 -->
-                     <div class="panel">
-                        <div class="panel-heading">
-                           <h5 class="panel-title">
-                              <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Value Added Services</a>
-                           </h5>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse">
-                           <div class="panel-body">
-                              <p>
-                                 Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc vel mauris ultricies, vest ibulum orci eget. 
-                              </p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <!-- /.accordion -->
                </div>
-               <!-- /col-lg-4 -->
-            </div>
             <!-- /row -->
             <div id="owl-icons" class="owl-carousel features-icon">
                <div class="col-sm-12">
@@ -623,7 +373,7 @@
                <!-- Image -->
                <img src="img/cake1.png" alt="">
             </div>
-            <div class="parallax-object hidden-sm hidden-xs hidden-md" 
+            <div class="parallax-object hidden-szxa   m hidden-xs hidden-md" 
                data-bottom-top="left:220px;margin-top:-70px;transform:translatey(40%);"
                data-top="transform:translatey(-120%);">
                <!-- Image -->
