removing items and updating about Us

--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -9,7 +9,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- Page title -->
-      <title>Piece of Cake - HTML Theme</title>
+      <title>Barry's Buns - We Love Buns</title>
       <!--[if lt IE 9]>
       <script src="js/respond.js"></script>
       <![endif]-->
@@ -44,7 +44,7 @@
                </button>
                <!-- Logo -->
                <div class="navbar-brand page-scroll">
-                  <a href="#page-top"><img src="img/Barrys.svg"  alt=""></a>
+                  <a href="#page-top"><img src="img/Barrys.png"  alt=""></a>
                </div>
             </div>
             <!-- /.navbar-header -->
@@ -104,16 +104,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Welcome to</sppan><br>Barry’s Buns</h1>
+                     <h1><span>Welcome to</span><br>Barry’s Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
                         <p class="subtitle"></p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <a class="btn" href="#contact">
+                           <!-- <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a>
+                           </a> -->
                         </div>
                      </div>
                   </div>
@@ -144,7 +144,7 @@
                   <div class="slide__text">
                      <h1><span>We Love</span><br>Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle"></p>
+                        <p class="subtitle">We specialize in gourmet sticky buns and cinnamon buns.<br>An offering of six sticky buns flavors along with an additional seasonal flavor, are on the menu.</p>
                         <div class="page-scroll">
                            <!-- Button -->
                            <!-- <a class="btn" href="#contact">
@@ -180,16 +180,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>We make cakes for</span><br>Your event</h1>
+                     <h1><span>Try our other</span><br>Tasty Baked Goods</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">Non metus ali quam eros eget liquam erat volutpat phasellus ac sodales felis lorem ipsuet lorens.</p>
+                        <p class="subtitle">In addition to our gourmet buns,<br>Barry offers a variety of tasty baked goods such as<br>sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles and old time favorites such as German butter cake.</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <a class="btn" href="#contact">
+                           <!-- <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a>
+                           </a> -->
                         </div>
                      </div>
                   </div>
@@ -218,16 +218,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Try our amazing</span><br>Macarons</h1>
+                     <h1><span>We are</span><br>Au-Naturale</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">Non metus ali quam eros eget liquam erat volutpat phasellus ac sodales felis lorem ipsuet lorens.</p>
+                        <p class="subtitle">There are no preservatives, artificial flavors, or colors in any of our tasty baked goods!</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <a class="btn" href="#contact">
+                           <!-- <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a>
+                           </a> -->
                         </div>
                      </div>
                   </div>
@@ -255,102 +255,15 @@
             <!-- Text -->
             <div class="row">
                <div class="col-lg-12 col-sm-12">
-                  <h3>Baking Delicious cakes since 1990</h3>
-                  <p>Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc 
-                     vel mauris ultricies, vest ibulum orci eget,Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac
-                     sodales felis tiam non Doloreiur qui commolu ptatemp dolupta orem retibusam 
-                     andigen Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac sodales felis tiam non metus.
-                  </p>
-                  <p>Placerat a ultricies a, posuere a nibh. Fusce mollis imperdiet interdum donec eget metus auguen unc vel mauris ultricies, vest ibulum orci eget,Fusce mollis imperdiet interdum donec eget metus auguen unc vel lorem ispuet Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem minus id omnis.
-                  </p>
+                  <p>Barry’s Buns is family owned business operated by Joel Singer (a.k.a Barry) with the help and support of his wife, Jen. Joel utilizes his expertise in the kitchen and heads up recipe development and production of the tasty baked goods while Jen &#8212; a paralegal and real estate agent by trade &#8212; handles all marketing, brand development, event planning, and business administration.</p>
+
+                  <p>Joel was born a baker. He started his own cheesecake business when he was 14 years old and during high school, he was in a culinary competition and took first place winning a $40,000 scholarship from Careers Through Culinary Arts Program (C-CAP) to attend Johnson & Wales University in Rhode Island. Joel graduated with a degree in Pastry Arts and was most recently the Regional Bakery Associate Coordinator of Whole Foods Market for the Mid-Atlantic Region. His formal career in pastry began at the Pennsylvania Convention Center and prior to working at Whole Foods Market, Joel was the Assistant Pastry Chef at The Rittenhouse Hotel under Executive Chef Jean Marie LaCroix.</p>
+
+                  <p>It has always been a lifelong goal for Joel to have his own place and sticky buns/cinnamon rolls have always been a favorite of Joel since childhood. His fondest childhood memory is that of his dad regularly bringing home sticky buns for the family.  Additionally, his dad, for many years before his recent passing, had his own business in a farmer style market. Joel loved the atmosphere and helping his dad take care of the customers, so when the opportunity arose for a location with the Market on the Fareway (also called the Chestnut Hill Farmer’s Market) in the Chestnut Hill neighborhood of Philadelphia, it was a sign that now is the time for Joel to open his own bakery.</p>
+
                </div>
                <!-- /col-lg-8 -->
                </div>
-            <!-- /row -->
-            <div id="owl-icons" class="owl-carousel features-icon">
-               <div class="col-sm-12">
-                  <!-- item1 -->
-                  <div class="media text-center">
-                     <i class="flaticon-electric-mixer"></i>
-                     <div class="media-body">
-                        <h5>Made With Love</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-sm-12">
-                  <!-- item2 -->
-                  <div class="media text-center">
-                     <i class="flaticon-gingerbread"></i>
-                     <div class="media-body">
-                        <h5>Seasonal Pastries</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-sm-12">
-                  <!-- item3 -->
-                  <div class="media text-center">
-                     <i class="flaticon-food-5"></i>
-                     <div class="media-body">
-                        <h5>Event Catering</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-sm-12">
-                  <!-- item4 -->
-                  <div class="media text-center">
-                     <i class="flaticon-wheat"></i>
-                     <div class="media-body">
-                        <h5>Gluten Free Options</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-sm-12">
-                  <!-- item5 -->
-                  <div class="media text-center">
-                     <i class="flaticon-food-12"></i>
-                     <div class="media-body">
-                        <h5>100% Homemade</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <!--/owl-icons-->
-            <div class="row">
-               <div class="col-lg-4 box">
-                  <h6>Our Features</h6>
-                  <ul class="no-margin">
-                     <li>Aliquam erat volut pat. </li>
-                     <li>Ibu lum orci eget, viverra elit. Aliquam erat volut pat phas ellus ac
-                        sodales felis
-                     </li>
-                     <li>Aliquam erat volut pat phas ellu, lorem ipsuet.</li>
-                     <li>Lorem ipsum Aliquam erat volut pat phas ellu lorem ipsuet.</li>
-                     <li>Ipsum Aliquam erat volut pat phas ellu lorem ipsuet Ibu lum orci eget, Aliquam erat volut pat phas ellus ac viverra elit.</li>
-                     <li>Aliquam erat volut pat phas ellu, lorem ipsuet.</li>
-                  </ul>
-               </div>
-               <!-- /col-lg-7 -->
-               <div class="col-lg-8">
-                  <div id="owl-about" class="owl-carousel">
-                     <div class="item">
-                        <img class="img-responsive img-rounded" src="img/about1.jpg" alt="">
-                     </div>
-                     <div class="item">
-                        <img class="img-responsive  img-rounded" src="img/about2.jpg" alt="">
-                     </div>
-                     <div class="item">
-                        <img class="img-responsive  img-rounded" src="img/about3.jpg" alt="">
-                     </div>
-                  </div>
-                  <!-- /owl-about -->
-               </div>
-               <!-- /col-lg-9 -->
-            </div>
             <!-- /row -->
          </div>
          <!--/container-->
@@ -362,22 +275,10 @@
          <div class="container">
             <!-- Parallax object -->
             <div class="parallax-object hidden-sm hidden-xs hidden-md" 
-              data-bottom-top="left:0%;margin-top:-30px;transform:translatey(0%);"
-               data-top="transform:translatey(-120%);">
-               <!-- Image -->
-               <img src="img/cake3.png" alt="">
-            </div>
-            <div class="parallax-object hidden-sm hidden-xs hidden-md" 
                data-bottom-top="left:60px;margin-top:120px;transform:translatey(0%);"
                data-top="transform:translatey(-120%);">
                <!-- Image -->
-               <img src="img/cake1.png" alt="">
-            </div>
-            <div class="parallax-object hidden-szxa   m hidden-xs hidden-md" 
-               data-bottom-top="left:220px;margin-top:-70px;transform:translatey(40%);"
-               data-top="transform:translatey(-120%);">
-               <!-- Image -->
-               <img src="img/cherry.png" alt="">
+               <img src="img/cakepops_bg.png" alt="">
             </div>
             <!-- Section Heading -->
             <div class="section-heading">
