--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -29,9 +29,7 @@
       <!-- CSS Plugins -->
       <link rel="stylesheet" href="css/plugins.css">
       <!-- Favicons-->
-      <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="image/bun.png">
    </head>
    <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
       <!-- Navbar -->
@@ -1014,139 +1012,7 @@
       <!-- Divider --> 
       <div class="slanted-divider"></div>
 	  
-      <!-- Section Team -->	
-      <section id="team">
-         <div class="container">
-            <!-- Section Heading -->
-            <div class="section-heading">
-               <h2>Our Team</h2>
-               <div class="hr"></div>
-            </div>
-            <div id="owl-team" class="owl-carousel">
-               <!-- Team member 1 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team1.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>Mary Jones</h4>
-                     <h6>Founder</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-               <!-- Team member 2 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team2.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>John Smith</h4>
-                     <h6>Cake Expert</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-               <!-- Team member 3 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team3.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>Lilian Doe</h4>
-                     <h6>Master Baker</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-               <!-- Team member 4 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team4.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>Nancy Nine</h4>
-                     <h6>Master Baker</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-               <!-- Team member 5 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team5.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>Lucas Morris</h4>
-                     <h6>Master Baker</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-               <!-- Team member 6 -->	
-               <div class="team-member">
-                  <div class="profile-image img-zoom">
-                     <img src="img/team6.jpg" alt="" />
-                  </div>
-                  <div class="team-caption">
-                     <h4>Laura Santos</h4>
-                     <h6>Master Baker</h6>
-                     <p>Ibu lum orci eget liquam erat volut pat phas ellus ac sodales felis commolu ptatemp dolupta orem retibusam.</p>
-                     <!--Social icons -->	
-                     <div class="social-media smaller">
-                        <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        <a href="#" title=""><i class="fa fa-facebook"></i></a>
-                        <a href="#" title=""><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title=""><i class="fa fa-pinterest"></i></a>
-                        <a href="#" title=""><i class="fa fa-instagram"></i></a>
-                     </div>
-                  </div>
-               </div>
-               <!--/team member ends-->
-            </div>
-         </div>
-      </section>
-      <!--/ Section --> 
+
 	  
       <!-- Section Newsletter-->
       <section id="newsletter" class="color-section" data-0="background-position:0px -40px;" data-end="background-position:1000px -40px;">
@@ -1287,7 +1153,7 @@
                </div>
                <!-- /col-lg-4 -->
                <div class="col-md-12 text-center">
-                  <p>Copyright © 2016 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a></p>
+                  <p>Copyright © 2016 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> | Developed by Jessica Cornell</p>
                   <!-- /container -->
                   <!-- Go To Top Link -->
                   <div class="page-scroll hidden-sm hidden-xs">
