--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -250,6 +250,9 @@
                <h2>About Us</h2>
                <div class="hr"></div>
             </div>
+            <!-- image -->
+               <div class="about-us-img"><img href=""/></div>
+            
             <!-- Text -->
             <div class="row">
                <div class="col-lg-12 col-sm-12">
@@ -261,6 +264,7 @@
 
                </div>
                <!-- /col-lg-8 -->
+
                </div>
             <!-- /row -->
          </div>
@@ -351,10 +355,10 @@
                   <!-- required for floating -->
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs">
-                     <li class="active"><a href="#tab1" data-toggle="tab">Sticky Buns &<br>Cinnamon Rolls</a></li>
-                     <li><a href="#tab2" data-toggle="tab">Tasty Baked<br>Goods</a></li>
-                     <li><a href="#tab3" data-toggle="tab">Bars &<br>Cookies</a></li>
-                     <li><a href="#tab4" data-toggle="tab">Platters &<br>Catering</a></li>
+                     <li class="active "><a href="#tab1" data-toggle="tab">Sticky Buns &<br>Cinnamon Rolls</a></li>
+                     <li><a class="" href="#tab2" data-toggle="tab">Tasty Baked<br>Goods</a></li>
+                     <li><a class="" href="#tab3" data-toggle="tab">Bars &<br>Cookies</a></li>
+                     <li><a class="" href="#tab4" data-toggle="tab">Platters &<br>Catering</a></li>
                   </ul>
                </div>
                <div class="col-md-12 no-padding">
