--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -251,7 +251,7 @@
                <div class="hr"></div>
             </div>
             <!-- image -->
-               <div class="about-us-img"><img href=""/></div>
+               <div class="about-us-img"><img href="/img/jen_joel_1_reduced.jgp"/></div>
             
             <!-- Text -->
             <div class="row">
