edits with new versions of images

--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -88,7 +88,7 @@
                <div class="slide__bg"></div>
                <div class="slide__content">
                   <!-- SVG Overlay-->
-                  <svg version="1.1" class="slide__overlay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" class="slide__overlay welcome_overlay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      viewBox="0 0 294.996 294.996" style="enable-background:new 0 0 294.996 294.996;" xml:space="preserve">
                      <path d="M280.977,118.478c-13.619-10.807-20.563-27.57-18.574-44.845c1.3-11.3-2.566-22.393-10.607-30.432
                         c-8.044-8.043-19.136-11.909-30.434-10.607c-17.281,1.986-34.037-4.954-44.844-18.573C169.449,5.11,158.872,0,147.499,0
@@ -102,16 +102,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Welcome to</span><br>Barry’s Buns</h1>
+                     <h1>Welcome to<br>Barry’s Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
                         <p class="subtitle"></p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <!-- <a class="btn" href="#contact">
+                           <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a> -->
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -126,7 +126,7 @@
                <div class="slide__bg"></div>
                <div class="slide__content">
                   <!-- SVG Overlay-->
-                  <svg version="1.1" class="slide__overlay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" class="slide__overlay welcome_overlay" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      viewBox="0 0 294.996 294.996" style="enable-background:new 0 0 294.996 294.996;" xml:space="preserve">
                      <path d="M280.977,118.478c-13.619-10.807-20.563-27.57-18.574-44.845c1.3-11.3-2.566-22.393-10.607-30.432
                         c-8.044-8.043-19.136-11.909-30.434-10.607c-17.281,1.986-34.037-4.954-44.844-18.573C169.449,5.11,158.872,0,147.499,0
@@ -140,16 +140,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>We Love</span><br>Buns</h1>
+                     <h1>We Love Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">We specialize in gourmet sticky buns and cinnamon buns.<br>An offering of six sticky buns flavors along with an additional seasonal flavor, are on the menu.</p>
+                        <p class="subtitle">We specialize in gourmet sticky buns<br>and cinnamon buns.</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <!-- <a class="btn" href="#contact">
+                           <a class="btn" href="#contact">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
                               Contact us
-                           </a> -->
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -178,16 +178,16 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Try our other</span><br>Tasty Baked Goods</h1>
+                     <h1><span>Try our other<br>Tasty Baked Goods</span></h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">In addition to our gourmet buns,<br>Barry offers a variety of tasty baked goods such as<br>sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles and old time favorites such as German butter cake.</p>
+                        <p class="subtitle">Sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles and old time favorites such as German butter caked, seasonal items and more!</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <!-- <a class="btn" href="#contact">
+                           <a class="btn" href="#menu">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
-                              Contact us
-                           </a> -->
+                              Menu
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -218,14 +218,14 @@
                   <div class="slide__text">
                      <h1><span>We are</span><br>Au-Naturale</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">There are no preservatives, artificial flavors, or colors in any of our tasty baked goods!</p>
+                        <p class="subtitle">There are no preservatives, artificial flavors,<br>or colors in any of our tasty baked goods!<br>Nothing fake in these buns!</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <!-- <a class="btn" href="#contact">
+                           <a class="btn" href="#about">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
-                              Contact us
-                           </a> -->
+                              About us
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -250,17 +250,17 @@
                <h2>About Us</h2>
                <div class="hr"></div>
             </div>
-            <!-- image -->
-               <div class="about-us-img"><img href="/img/jen_joel_1_reduced.jgp"/></div>
-            
+                      
             <!-- Text -->
             <div class="row">
-               <div class="col-lg-12 col-sm-12">
+               <!-- image -->
+                  <img class="col-lg-4 col-sm-12 aboutus-img" src="/barrys_buns/pieceofcake_html/img/joel_jen_v3.jpg"/>  
+               <div class="col-lg-8 col-sm-12">
                   <p>Barry’s Buns is family owned business operated by Joel Singer (a.k.a Barry) with the help and support of his wife, Jen. Joel utilizes his expertise in the kitchen and heads up recipe development and production of the tasty baked goods while Jen &#8212; a paralegal and real estate agent by trade &#8212; handles all marketing, brand development, event planning, and business administration.</p>
 
                   <p>Joel was born a baker. He started his own cheesecake business when he was 14 years old and during high school, he was in a culinary competition and took first place winning a $40,000 scholarship from Careers Through Culinary Arts Program (C-CAP) to attend Johnson & Wales University in Rhode Island. Joel graduated with a degree in Pastry Arts and was most recently the Regional Bakery Associate Coordinator of Whole Foods Market for the Mid-Atlantic Region. His formal career in pastry began at the Pennsylvania Convention Center and prior to working at Whole Foods Market, Joel was the Assistant Pastry Chef at The Rittenhouse Hotel under Executive Chef Jean Marie LaCroix.</p>
 
-                  <p>It has always been a lifelong goal for Joel to have his own place and sticky buns/cinnamon rolls have always been a favorite of Joel since childhood. His fondest childhood memory is that of his dad regularly bringing home sticky buns for the family.  Additionally, his dad, for many years before his recent passing, had his own business in a farmer style market. Joel loved the atmosphere and helping his dad take care of the customers, so when the opportunity arose for a location with the Market on the Fareway (also called the Chestnut Hill Farmer’s Market) in the Chestnut Hill neighborhood of Philadelphia, it was a sign that now is the time for Joel to open his own bakery.</p>
+                  <p>It has always been a lifelong goal for Joel to have his own place and sticky buns have always been a favorite of Joel since childhood. His fondest childhood memory is that of his dad regularly bringing home sticky buns for the family.  Additionally, his dad, for many years before his recent passing, had his own business in a farmer style market. Joel loved the atmosphere and helping his dad take care of the customers, so when the opportunity arose for a location with the MARKET on the Fareway (formerly known as Chestnut Hill Farmers Market) in the Chestnut Hill neighborhood of Philadelphia, it was a sign that now is the time for Joel to open his own bakery.</p>
 
                </div>
                <!-- /col-lg-8 -->
